[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/buttons/MoveRightButton.tres" type="Texture" id=1]
[ext_resource path="res://assets/buttons/HardDropButton.tres" type="Texture" id=2]
[ext_resource path="res://assets/buttons/MoveLeftButton.tres" type="Texture" id=3]
[ext_resource path="res://assets/buttons/RotateRightButton.tres" type="Texture" id=4]
[ext_resource path="res://assets/buttons/RotateLeftButton.tres" type="Texture" id=5]
[ext_resource path="res://assets/buttons/PauseButton.tres" type="Texture" id=6]
[ext_resource path="res://assets/buttons/SoftDropButton.tres" type="Texture" id=7]
[ext_resource path="res://src/TouchButton.gd" type="Script" id=8]
[ext_resource path="res://assets/buttons/HoldButton.tres" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.72549, 0.72549, 0.72549, 1 )
border_width_bottom = 4
border_color = Color( 0.486275, 0.486275, 0.486275, 1 )

[node name="TouchControls" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0332
margin_top = 256.0
margin_right = -215.0
margin_bottom = -176.0
rect_min_size = Vector2( 215, 71 )
rect_scale = Vector2( 2, 2 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeftButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -13.0
margin_right = -83.0
margin_bottom = -1.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -13.0
margin_right = -35.0
margin_bottom = -1.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardDropButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -36.5
margin_right = -59.0
margin_bottom = -24.5
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoftDropButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = 10.5
margin_right = -59.0
margin_bottom = 22.5
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateRightButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.5
margin_top = -13.0
margin_right = 84.5
margin_bottom = -1.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateLeftButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 28.0
margin_top = -13.0
margin_right = 40.0
margin_bottom = -1.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 50.5
margin_top = -36.5
margin_right = 62.5
margin_bottom = -24.5
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.5
margin_top = 12.0
margin_right = 2.49999
margin_bottom = 25.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 6 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
